first commit and refactor
